--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ---
 layout: layouts/homepage.html
-title: "Your amazing meetup"
-about: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer feugiat ornare lorem, nec pulvinar diam ultricies ut. Donec bibendum quam sollicitudin arcu posuere, vel faucibus diam laoreet. In feugiat rhoncus magna, sed fermentum urna dictum sed. Integer mattis massa sit amet nulla blandit bibendum. "
+title: Memphis Server-Side Programming Meetup
+about: >
+  Developer Meetup in Memphis focusing on server side programming languages and
+  infrastructure. #memtech
 ---
+
